--- a/3 - Vektoren/3 - Solution.Rmd
+++ b/3 - Vektoren/3 - Solution.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
-author: "Clemens Brunner"
-date: "14.-15.2.2019"
+author: "[Clemens Brunner](mailto:clemens.brunner@uni-graz.at)"
+date: "18.-19.10.2019"
 output:
   html_document:
     fig_caption: no
@@ -82,7 +82,7 @@ std <- c(1, 2.22, 11.3, 7.8, 3.4, 6)
 std**2  # Varianzen
 ```
 
----
+
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("cc_license.png")
